re PR target/10129 ([3.4 only] Ada bootstrap fails on PPC-Darwin - invalid assembler emitted - PIC related)

2004-06-19  Andrew Pinski  <pinskia@physics.uc.edu>

        PR target/10129
        * config/darwin.c (darwin_encode_section_info): When the decl has
        a DECL_INITIAL, it is only defined also when it is not a common.

From-SVN: r83392